--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <span class="cart__title">Meu carrinho</span>
       </div>
     </header>
+    <section class="loading">carregando</section>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
